--- a/star-wars/src/app/components/header/header.component.html
+++ b/star-wars/src/app/components/header/header.component.html
@@ -3,10 +3,10 @@
     <ol class="header__list">
       <li routerLink="/characters" class="header__link"><a>Characters</a></li>
       <li routerLink="/films" class="header__link"><a>Films</a></li>
-      <li routerLink="/starships" class="header__link"><a>Starships</a></li>
-      <li routerLink="/vehicles" class="header__link"><a>Vehicles</a></li>
       <li routerLink="/planets" class="header__link"><a>Planets</a></li>
-      <li routerLink="/admin" class="header__link"><a>Admin</a></li>
+      <li routerLink="/admin" class="header__link header__link_admin"><a>Admin</a></li>
     </ol>
   </menu>
 </header>
+
+
